--- a/MAMA.html
+++ b/MAMA.html
@@ -41,7 +41,7 @@
 </head>
 <body>
     <h1>HOLA MAMÁ</h1>
-    <h1>Este año no te compré nada, pero soy creativo y te felicito de este modo</h1>
+    <h1>Este año quise intentar algo diferente, y como soy creativo y te felicito de este modo</h1>
     <h2>Te quiere tu hijo Fernando</h2>
     <img src="AY2WT5M6FRAUVJHO7LGRIDLO34.avif" alt="">
 </body>
